added mouse scroll to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -s escape-time 0
 set -g base-index 1
 set -g status-position top
+set -g mouse on
 
 set -g default-terminal "tmux-256color"
 set -g @catppuccin_flavor "mocha"
